--- a/index.html
+++ b/index.html
@@ -22,37 +22,23 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <!--MY JS LINK-->
+    <script  type=text/javascript src="assets/javascript/game.js"></script>
 
 
 </head>
 
 <body>
 
-    <div class="wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-
-                    <h1> Psychic Game </h1>
-                    <br>
-                    <h3>Guess what letter I'm thinking of!</h3>
-                    <br>
-                    <h3 id="yourWins">Wins:</h3>
-                    <br>
-                    <h3 id="yourLosses">Losses:</h3>
-                    <br>
-                    <h3 id="guessesLeft">Guesses Left:</h3>
-                    <br>
-                    <h3 id="playersChoice">Guesses So Far:</h3>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <script src="assets/javascript/game.js">
-
-    </script>
+<div id="game">
+        <h1> The Psychic Game </h1>
+        <br>
+        <p>Guess what letter I'm thinking of!</p>
+        <p>Wins:</p>
+        <p>Losses:</p>
+        <p>Guesses Left:</p>
+        <p>Your Guesses so far:</p>
+</div>
 
 </body>
 
